--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </header>
 <div class="container">
 <p>雑にみゆぷり画像を並べる</p>
+<div class="art">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140922/20140922225759.png">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140324/20140324221030.png">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140225/20140225234215.jpg">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140411/20140411134840.png">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140723/20140723232757.png">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20150119/20150119221509.png">
+</div>
 </div>
 </body>
 </html>
