--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 <header>
+<div class="title">
 <h1>画伯美術館</h1>
+</div>
+<div class="menu">
+  <ul>
+    <li>画伯美術館とは</li>
+    <li>画伯について</li>
+    <li>リクエスト</li>
+    </ul>
+  </div>
 </header>
 <div class="container">
 <p>雑にみゆぷり画像を並べる</p>
