--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </div>
 <div class="menu">
   <ul>
-    <li>画伯美術館とは</li>
-    <li>画伯について</li>
-    <li>リクエスト</li>
+    <li><a href="./what.html">画伯美術館とは</a></li>
+    <li><a href="./who.html">画伯について</a></li>
+    <li><a href="./request.html">リクエスト</a></li>
     </ul>
   </div>
 </header>
