--- a/what.html
+++ b/what.html
@@ -19,10 +19,11 @@
   </div>
 </header>
 <div class="container">
+  <h2>画伯美術館とは</h2>
 <div class="self-portrait">
 <img src="http://f.st-hatena.com/images/fotolife/m/meymao/20160217/20160217114624.png?1455677209">
 </div>
-<p>めいまお画伯。みゆぷりあんぬ画像を書き続けて4年くらい。</p>
+<p>めいまお画伯によって描かれたみゆぷりあんぬ画像を展示するWeb美術館。。</p>
 </div>
 </body>
 </html>
