--- a/what.html
+++ b/what.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 <div class="title">
-<h1>><a href="index.html">画伯美術館</a></h1>
+<h1><a href="index.html">画伯美術館</a></h1>
 </div>
 <div class="menu">
   <ul>
