--- a/index.html
+++ b/index.html
@@ -21,14 +21,30 @@
 <div class="container">
 <p>雑にみゆぷり画像を並べる</p>
 <div class="figure">
-<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140922/20140922225759.png" alt="みゆぷりあんぬ">
-<figcaption>みゆぷりあんぬ</figcaption>
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140922/20140922225759.png" alt="全方位的にきびしいみゆぷりあんぬ">
+<figcaption>全方位的にきびしいみゆぷりあんぬ</figcaption>
+    </div>
+<div class="figure">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140324/20140324221030.png" alt="胃が小さくなったみゆぷりあんぬ">
+    <figcaption>胃が小さくなったみゆぷりあんぬ</figcaption>
+    </div>
+<div class="figure">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140225/20140225234215.jpg" alt="ヘッドフォンとみゆぷりあんぬ">
+　　　<figcaption>ヘッドフォンとみゆぷりあんぬ</figcaption>
+    </div>
+<div class="figure">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140411/20140411134840.png" alt="新幹線に乗るみゆぷりあんぬ">
+    <figcaption>新幹線に乗るみゆぷりあんぬ</figcaption>
 </div>
-<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140324/20140324221030.png">
-<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140225/20140225234215.jpg">
-<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140411/20140411134840.png">
-<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140723/20140723232757.png">
-<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20150119/20150119221509.png">
+    <div class="figure">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20140723/20140723232757.png" alt="高い高いされるみゆぷりあんぬ">
+    <figcaption>高い高いされるみゆぷりあんぬ</figcaption>
+    </div>
+<div class="figure">
+<img src="http://f.st-hatena.com/images/fotolife/m/meymao/20150119/20150119221509.png" alt="相方">
+    <figcaption>まおぷりあんぬず</figcaption>
+    </div>
+    </div>
 </div>
 </div>
 </body>
